# herd_wise

./: main.py  pyproject.toml
.github/workflows/: test.yml
apps/management/: apps.py
apps/pages/: apps.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/settings/: __init__.py  base.py  local.py
templates/: base_layout.html
templates/pages/: index.html
