[project]
name = "herd-wise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-allauth[socialaccount]>=65.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]

[tool.ruff.lint]

